tests/invalid/multimode_missing_impure.err_exp
multimode_missing_impure.m:029: In predicate `test1'/1:
multimode_missing_impure.m:029:   purity error: predicate is impure.
multimode_missing_impure.m:029:   It must be declared `impure' or promised
multimode_missing_impure.m:029:   pure.
multimode_missing_impure.m:038: In predicate `test2'/2:
multimode_missing_impure.m:038:   purity error: predicate is impure.
multimode_missing_impure.m:038:   It must be declared `impure' or promised
multimode_missing_impure.m:038:   pure.
